--- a/index.html
+++ b/index.html
@@ -73,7 +73,85 @@
 				<div class="img3"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
 			</div>
 			<div class="tov_info ">
-				<p class="text-center text">Платье HM 0470607 Зеленое</p>
+				<p class="text-center text">Платье HM 0470607 Зеленое Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, accusamus.</p>
+				<p class="text-center">Размер: L</p>
+				<button type="button" class="btn btn-danger">ЗАМОВИТИ</button>
+			</div>
+		</div>
+		<div class="tov ">
+			<div class="con">
+				<div class="img "><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
+				<div class="img1"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
+				<div class="img2"><img class="img-fluid img-thumbnail" src="img/tovar_mini1.jpg" alt=""></div>
+				<div class="img3"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
+			</div>
+			<div class="tov_info ">
+				<p class="text-center text">Платье HM 0470607 Зеленое Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, accusamus.</p>
+				<p class="text-center">Размер: L</p>
+				<button type="button" class="btn btn-danger">ЗАМОВИТИ</button>
+			</div>
+		</div>
+		<div class="tov ">
+			<div class="con">
+				<div class="img "><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
+				<div class="img1"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
+				<div class="img2"><img class="img-fluid img-thumbnail" src="img/tovar_mini1.jpg" alt=""></div>
+				<div class="img3"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
+			</div>
+			<div class="tov_info ">
+				<p class="text-center text">Платье HM 0470607 Зеленое Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, accusamus.</p>
+				<p class="text-center">Размер: L</p>
+				<button type="button" class="btn btn-danger">ЗАМОВИТИ</button>
+			</div>
+		</div>
+		<div class="tov ">
+			<div class="con">
+				<div class="img "><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
+				<div class="img1"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
+				<div class="img2"><img class="img-fluid img-thumbnail" src="img/tovar_mini1.jpg" alt=""></div>
+				<div class="img3"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
+			</div>
+			<div class="tov_info ">
+				<p class="text-center text">Платье HM 0470607 Зеленое Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, accusamus.</p>
+				<p class="text-center">Размер: L</p>
+				<button type="button" class="btn btn-danger">ЗАМОВИТИ</button>
+			</div>
+		</div>
+		<div class="tov ">
+			<div class="con">
+				<div class="img "><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
+				<div class="img1"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
+				<div class="img2"><img class="img-fluid img-thumbnail" src="img/tovar_mini1.jpg" alt=""></div>
+				<div class="img3"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
+			</div>
+			<div class="tov_info ">
+				<p class="text-center text">Платье HM 0470607 Зеленое Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, accusamus.</p>
+				<p class="text-center">Размер: L</p>
+				<button type="button" class="btn btn-danger">ЗАМОВИТИ</button>
+			</div>
+		</div>
+		<div class="tov ">
+			<div class="con">
+				<div class="img "><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
+				<div class="img1"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
+				<div class="img2"><img class="img-fluid img-thumbnail" src="img/tovar_mini1.jpg" alt=""></div>
+				<div class="img3"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
+			</div>
+			<div class="tov_info ">
+				<p class="text-center text">Платье HM 0470607 Зеленое Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, accusamus.</p>
+				<p class="text-center">Размер: L</p>
+				<button type="button" class="btn btn-danger">ЗАМОВИТИ</button>
+			</div>
+		</div>
+		<div class="tov ">
+			<div class="con">
+				<div class="img "><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
+				<div class="img1"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
+				<div class="img2"><img class="img-fluid img-thumbnail" src="img/tovar_mini1.jpg" alt=""></div>
+				<div class="img3"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
+			</div>
+			<div class="tov_info ">
+				<p class="text-center text">Платье HM 0470607 Зеленое Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, accusamus.</p>
 				<p class="text-center">Размер: L</p>
 				<button type="button" class="btn btn-danger">ЗАМОВИТИ</button>
 			</div>
@@ -125,7 +203,7 @@
 				<div class="img3"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
 			</div>
 			<div class="tov_info ">
-				<p class="text-center text">Платье HM 0470607 Зеленое</p>
+				<p class="text-center">Платье HM 0470607 Зеленое Lorem ipsum dolor sit amet.</p>
 				<p class="text-center">Размер: L</p>
 				<button type="button" class="btn btn-danger">ЗАМОВИТИ</button>
 			</div>
