--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 					<div class="navbar-nav">
 						<a class="nav-item nav-link active text-dark" href="#">Магазин</a>
-						<a class="nav-item nav-link text-dark" href="#">Доставка та оплата</a>
+						<a class="nav-item nav-link text-dark" href="delivery.html">Доставка та оплата</a>
 						<a class="nav-item nav-link text-dark" href="#">Новинки</a>
 						<a class="nav-item nav-link text-dark" href="#">Контакти</a>
 					</div>
@@ -79,7 +79,7 @@
 					<label><input type="checkbox"/><i></i>Рубашки</label>
 				</div>
 			</div>
-			
+
 			<div class="size"></div>
 			<div class="price"></div>
 		</div>
