--- a/delivery.html
+++ b/delivery.html
@@ -2,117 +2,152 @@
 <html lang="ru">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="viewport" content="width=device-width">
-	<title>Shop-Shop</title>
-	<link rel="icon" href="favicon.ico">
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/delivery.css">
-	<link rel="stylesheet" href="css/delivery-media.css">
-	<link rel="stylesheet" href="css/style-media.css">
-	<link rel="stylesheet" href="css/bootstrap.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/font-awesome.css">
-	<script type="text/javascript" href="js/javascript.js"></script>
-	<script type="text/javascript" href="js/bodstsrap.min.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width">
+    <title>Shop-Shop</title>
+    <link rel="icon" href="favicon.ico">
+    <link rel="stylesheet" href="css/delivery.css">
+    <link rel="stylesheet" href="css/delivery-media.css">
+    <link rel="stylesheet" href="css/style-media.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/font-awesome.css">
+    <script type="text/javascript" href="js/javascript.js"></script>
+    <script type="text/javascript" href="js/bodstsrap.min.js"></script>
 
 </head>
 
 <body>
-	<div class="wrapper">
-		<header class="container-fluid">
-			<nav class="navbar navbar-expand-md navbar-light">
-				<div class="navbar-brand">
-					<a href="index.html">UA</a>
-					<a href="#">RU</a>
-				</div>
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <div class="wrapper">
+        <header class="container-fluid">
+            <nav class="navbar navbar-expand-md navbar-light">
+                <div class="navbar-brand">
+                    <a href="index.html">UA</a>
+                    <a href="#">RU</a>
+                </div>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
-				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-					<div class="navbar-nav">
-						<a class="nav-item nav-link active text-dark" href="#">Магазин</a>
-						<a class="nav-item nav-link text-dark" href="#">Доставка та оплата</a>
-						<a class="nav-item nav-link text-dark" href="#">Новинки</a>
-						<a class="nav-item nav-link text-dark" href="#">Контакти</a>
-					</div>
-					<div class="navbar-nav ml-auto">
-						<a class="nav-item nav-link text-dark" href="#">Увійти</a>
-					</div>
-				</div>
-			</nav>
-			<div class="container-fluid ">
-				<div class="row justify-content-center">
-					<div class="col-xl-3 col-lg-2 col-md-2 col-sm-0 col-0 order-5 order-lg-1  logo">
-						<img src="img/icon.png" alt="">
-					</div>
-					<div class="col-xl-7 col-lg-8 col-md-8 col-sm-8 col-12 align-self-center order-2 order-md-2 bloc2">
-						<div class="input-group serch_main">
-							<input type="text" class="form-control" placeholder="Пошук..." aria-label="Search for...">
-							<span class="input-group-btn">
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-item nav-link active text-dark" href="index.html">Магазин</a>
+                        <a class="nav-item nav-link text-dark" href="#">Доставка та оплата</a>
+                        <a class="nav-item nav-link text-dark" href="#">Новинки</a>
+                        <a class="nav-item nav-link text-dark" href="#">Контакти</a>
+                    </div>
+                    <div class="navbar-nav ml-auto">
+                        <a class="nav-item nav-link text-dark" href="#">Увійти</a>
+                    </div>
+                </div>
+            </nav>
+            <div class="container-fluid ">
+                <div class="row justify-content-center">
+                    <div class="col-xl-3 col-lg-2 col-md-2 col-sm-0 col-0 order-5 order-lg-1  logo">
+                        <img src="img/icon.png" alt="">
+                    </div>
+                    <div class="col-xl-7 col-lg-8 col-md-8 col-sm-8 col-12 align-self-center order-2 order-md-2 bloc2">
+                        <div class="input-group serch_main">
+                            <input type="text" class="form-control" placeholder="Пошук..." aria-label="Search for...">
+                            <span class="input-group-btn">
 							<button class="btn btn-secondary" type="button">Пошук</button>
 						</span>
-						</div>
-					</div>
-					<div class="col-xl-1 col-lg-1 col-md-2 col-sm-2 col-4 order-3 order-md-3 text-center heart">
-						<span class="badge badge-success">3</span>
-						<img class="img-fluid" src="img/heart.png" alt="" href="#">
-						<p>Сподобалось</p>
-					</div>
-					<div class="col-xl-1 col-lg-1 col-md-2 col-sm-2 col-4 order-4 order-md-4 text-center cart">
-						<span class="badge badge-success">1</span>
-						<img class="img-fluid" src="img/cart.png" alt="" href="#">
-						<p>Корзина</p>
-					</div>
-				</div>
-			</div>
-		</header>
-		<content>
-            <h1>Оплата и доставка</h1>
-            <div>
-
+                        </div>
+                    </div>
+                    <div class="col-xl-1 col-lg-1 col-md-2 col-sm-2 col-4 order-3 order-md-3 text-center heart">
+                        <span class="badge badge-success">3</span>
+                        <img class="img-fluid" src="img/heart.png" alt="" href="#">
+                        <p>Сподобалось</p>
+                    </div>
+                    <div class="col-xl-1 col-lg-1 col-md-2 col-sm-2 col-4 order-4 order-md-4 text-center cart">
+                        <span class="badge badge-success">1</span>
+                        <img class="img-fluid" src="img/cart.png" alt="" href="#">
+                        <p>Корзина</p>
+                    </div>
+                </div>
             </div>
-		</content>
-		<footer>
-			<div class="container">
-				<div class="row justify-content-center">
-					<div class="col-4 col-lg-3 widget_nav_menu">
-						<p class="title-widget text-center">Каталог</p>
-						<ul class="list-unstyled">
-							<li><a href="#">Головні убори</a></li>
-							<li><a href="#">Жіночий одяг</a></li>
-							<li><a href="#">Аксесуари</a></li>
-							<li><a href="#">Жіноче взуття</a></li>
-							<li><a href="#">Розпродаж</a></li>
-						</ul>
-					</div>
-					<div class="col-4 col-lg-3 widget_nav_menu">
-						<p class="title-widget text-center">Про нас</p>
-						<ul class="list-unstyled">
-							<li><a href="#">Магазин</a></li>
-							<li><a href="">Новини</a></li>
-							<li><a href="#">Доставка та оплата</a></li>
-							<li><a href="#">Контакти</a></li>
-						</ul>
-					</div>
-					<div class="col-4 col-lg-3 ">
-						<p class="title-widget">Контакти </p>
-						<div class="contact">
-							<p>Email: mail@gmail.com</p>
-							<p>Оператор +380502232658</p>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="bottom text-center">
-				<p> © 2017 Усі права захищені</p>
-			</div>
-		</footer>
-		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-	</div>
+        </header>
+        <content>
+            <div class="content">
+                <div class="frame-crumbs">
+                    </div>
+                </div>
+                <div class="frame-inside page-text">
+                    <div class="container">
+                        <h1>Оплата и доставка</h1>
+                        <div class="text">
+                            <p><span style="font-size: 12pt;"><strong>Обработка и доставка заказа по Украине</strong></span></p>
+                            <ol>
+                                <li><span style="font-size: 10pt;">Комплектация заказа и отправка длится 2-4&nbsp;дня (при отсутствии товара на складе –&nbsp; 7-10 дней).</span></li>
+                                <li><span style="font-size: 10pt;">Когда ваша посылка будет на отделении НП или Укрпочты, вам придет SMS с номером вашей декларации/чека.</span></li>
+                                <li><span style="font-size: 10pt;">Пересылка заказа проводится двумя службами - <strong>Новая почта</strong> и <strong>Укрпочта</strong>. Стоимость пересылки Укрпочтой&nbsp; 30 грн., Новой почтой – от 25 до 50 в зависимости от веса/объема посылки.&nbsp; Сроки доставки Укрпочтой – 4-7 дней, Новой почтой – 1-3 дня.</span></li>
+                                <li><span style="font-size: 10pt;">Отправки проводятся с понедельника по субботу. В воскресенье отправок нет.</span></li>
+                            </ol>
+                            <p><span style="font-size: 12pt;"><strong>Оплата заказа</strong></span></p>
+                            <ol>
+                                <li><span style="font-size: 10pt;">Банковский перевод на <strong>счет</strong> Приватбанка</span></li>
+                                <li><span style="font-size: 10pt;">Банковская карточка (Приват-24, терминал)</span></li>
+                                <li><span style="font-size: 10pt;">Наличными при получении в отделении Новой почты или Укрпочты.</span></li>
+                            </ol>
+                            <p><span style="font-size: 10pt;"><strong>Комиссию за услугу наложенного платежа (пересылку денег) оплачивает покупатель&nbsp; по тарифам службы доставки.</strong></span></p>
+                            <p><span style="font-size: 12pt;"><strong></strong></span></p>
+                            <p><span style="font-size: 12pt;"><strong>Возврат/обмен</strong></span></p>
+                            <p><span style="font-size: 10pt;">Если по каким-либо причинам Вам не подошел заказ, <strong>Вы можете вернуть покупку в течении 14 календарных дней со дня получения товара, при условии, если:</strong></span></p>
+                            <ul>
+                                <li><span style="font-size: 10pt;">товар не был в использовании/употреблении (отсутствие следов носки, пятен и других загрязнений);</span></li>
+                                <li><span style="font-size: 10pt;">сохранен товарный вид, потребительские свойства, ярлыки, упаковка.</span></li>
+                            </ul>
+                            <p><span style="font-size: 10pt;">Чтобы вернуть/обменять товар, перезвоните менеджерам для уточнения данных для отправки, а также способа возврата денег вам. </span></p>
+                            <p><span style="font-size: 10pt;"><strong>Телефоны:</strong> 099 012-14-01 (Водафон), 096 457-10-34 (Киевстар), 063 175-47-50 (Лайф)</span></p>
+                            <p><span style="font-size: 10pt;">Срок возврата денежных средств — до 2&nbsp;календарных дней с даты поступления возвращенного товара.</span></p>
+                            <p><span style="font-size: 10pt;">Комплектация заказа на обмен осуществляется после получение возврата от Вас.</span></p>
+                            <p><span style="font-size: 10pt;"><strong>!!! Пересылку возврата/обмена покупатель оплачивает сам.</strong></span></p>
+                            <p><span>&nbsp;</span></p>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </content>
+        <footer>
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-4 col-lg-3 widget_nav_menu">
+                        <p class="title-widget text-center">Каталог</p>
+                        <ul class="list-unstyled">
+                            <li><a href="#">Головні убори</a></li>
+                            <li><a href="#">Жіночий одяг</a></li>
+                            <li><a href="#">Аксесуари</a></li>
+                            <li><a href="#">Жіноче взуття</a></li>
+                            <li><a href="#">Розпродаж</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-4 col-lg-3 widget_nav_menu">
+                        <p class="title-widget text-center">Про нас</p>
+                        <ul class="list-unstyled">
+                            <li><a href="#">Магазин</a></li>
+                            <li><a href="">Новини</a></li>
+                            <li><a href="#">Доставка та оплата</a></li>
+                            <li><a href="#">Контакти</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-4 col-lg-3 ">
+                        <p class="title-widget">Контакти </p>
+                        <div class="contact">
+                            <p>Email: mail@gmail.com</p>
+                            <p>Оператор +380502232658</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="bottom text-center">
+                <p> © 2017 Усі права захищені</p>
+            </div>
+        </footer>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+    </div>
 </body>
 
 </html>
