--- a/delivery.html
+++ b/delivery.html
@@ -9,7 +9,6 @@
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="css/delivery.css">
     <link rel="stylesheet" href="css/delivery-media.css">
-    <link rel="stylesheet" href="css/style-media.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/font-awesome.css">
@@ -17,6 +16,7 @@
     <script type="text/javascript" href="js/bodstsrap.min.js"></script>
 
 </head>
+
 
 <body>
     <div class="wrapper">
@@ -68,7 +68,7 @@
             </div>
         </header>
         <content>
-        <div class="container">
+        <div class="delivery">
             <h1 class="text-center">Оплата и доставка</h1>
             <div class="text">
                 <p><span ><strong>Обработка и доставка заказа по Украине</strong></span></p>
