add_files_contact

--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
 			</button>
 				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 					<div class="navbar-nav">
-						<a class="nav-item nav-link active text-dark" href="#">Магазин</a>
+						<a class="nav-item nav-link active text-dark" href="index.html">Магазин</a>
 						<a class="nav-item nav-link text-dark" href="delivery.html">Доставка та оплата</a>
-						<a class="nav-item nav-link text-dark" href="#">Новинки</a>
-						<a class="nav-item nav-link text-dark" href="#">Контакти</a>
+						<a class="nav-item nav-link text-dark" href="contact.html">Контакти</a>
 					</div>
 					<div class="navbar-nav ml-auto">
 						<a class="nav-item nav-link text-dark" href="#">Увійти</a>
