--- a/delivery.html
+++ b/delivery.html
@@ -116,10 +116,9 @@
                 <div class="col-4 col-lg-3 widget_nav_menu">
                     <p class="title-widget text-center">Про нас</p>
                     <ul class="list-unstyled">
-                        <li><a href="#">Магазин</a></li>
-                        <li><a href="">Новини</a></li>
-                        <li><a href="#">Доставка та оплата</a></li>
-                        <li><a href="#">Контакти</a></li>
+                        <li><a href="index.html">Магазин</a></li>
+                        <li><a href="delivery.html">Доставка та оплата</a></li>
+                        <li><a href="contact.html">Контакти</a></li>
                     </ul>
                 </div>
                 <div class="col-4 col-lg-3 ">
