--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/font-awesome.css">
-	<script type="text/javascript" href="js/javascript.js"></script>
 	<script type="text/javascript" href="js/bodstsrap.min.js"></script>
 
 </head>
@@ -103,9 +102,9 @@
 				</div>
 			</div>
 			<!-- tovaru -->
-			<div class="tov ">
+			<div class="tov" id="goods">
 				<div class="con">
-					<div class="img "><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
+					<div class="img "><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt="ssss" id="myImg"></div>
 					<div class="img1"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
 					<div class="img2"><img class="img-fluid img-thumbnail" src="img/tovar_mini1.jpg" alt=""></div>
 					<div class="img3"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
@@ -114,149 +113,6 @@
 					<p class="text-center text">Платье HM 0470607 Зеленое Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, accusamus.</p>
 					<p class="text-center">Размер: L</p>
 					<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal">ЗАМОВИТИ</button>
-				</div>
-			</div>
-			<div class="tov ">
-				<div class="con">
-					<div class="img "><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
-					<div class="img1"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
-					<div class="img2"><img class="img-fluid img-thumbnail" src="img/tovar_mini1.jpg" alt=""></div>
-					<div class="img3"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
-				</div>
-				<div class="tov_info ">
-					<p class="text-center text">Платье HM 0470607 Зеленое Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-					<p class="text-center">Размер: L</p>
-					<button type="button" class="btn btn-danger">ЗАМОВИТИ</button>
-				</div>
-			</div>
-			<div class="tov ">
-				<div class="con">
-					<div class="img "><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
-					<div class="img1"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
-					<div class="img2"><img class="img-fluid img-thumbnail" src="img/tovar_mini1.jpg" alt=""></div>
-					<div class="img3"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
-				</div>
-				<div class="tov_info ">
-					<p class="text-center text">Платье HM 0470607 Зеленое </p>
-					<p class="text-center">Размер: L</p>
-				</div>
-				<button type="button" class="btn btn-danger">ЗАМОВИТИ</button>
-			</div>
-			<div class="tov ">
-				<div class="con">
-					<div class="img "><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
-					<div class="img1"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
-					<div class="img2"><img class="img-fluid img-thumbnail" src="img/tovar_mini1.jpg" alt=""></div>
-					<div class="img3"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
-				</div>
-				<div class="tov_info ">
-					<p class="text-center text">Платье HM 0470607 Зеленое Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, accusamus.</p>
-					<p class="text-center">Размер: L</p>
-					<button type="button" class="btn btn-danger">ЗАМОВИТИ</button>
-				</div>
-			</div>
-			<div class="tov ">
-				<div class="con">
-					<div class="img "><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
-					<div class="img1"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
-					<div class="img2"><img class="img-fluid img-thumbnail" src="img/tovar_mini1.jpg" alt=""></div>
-					<div class="img3"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
-				</div>
-				<div class="tov_info ">
-					<p class="text-center text">Платье HM 0470607 Зеленое Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, accusamus.</p>
-					<p class="text-center">Размер: L</p>
-					<button type="button" class="btn btn-danger">ЗАМОВИТИ</button>
-				</div>
-			</div>
-			<div class="tov ">
-				<div class="con">
-					<div class="img "><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
-					<div class="img1"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
-					<div class="img2"><img class="img-fluid img-thumbnail" src="img/tovar_mini1.jpg" alt=""></div>
-					<div class="img3"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
-				</div>
-				<div class="tov_info ">
-					<p class="text-center text">Платье HM 0470607 Зеленое Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, accusamus.</p>
-					<p class="text-center">Размер: L</p>
-					<button type="button" class="btn btn-danger">ЗАМОВИТИ</button>
-				</div>
-			</div>
-			<div class="tov ">
-				<div class="con">
-					<div class="img "><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
-					<div class="img1"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
-					<div class="img2"><img class="img-fluid img-thumbnail" src="img/tovar_mini1.jpg" alt=""></div>
-					<div class="img3"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
-				</div>
-				<div class="tov_info ">
-					<p class="text-center text">Платье HM 0470607 Зеленое Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, accusamus.</p>
-					<p class="text-center">Размер: L</p>
-					<button type="button" class="btn btn-danger">ЗАМОВИТИ</button>
-				</div>
-			</div>
-			<div class="tov ">
-				<div class="con">
-					<div class="img "><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
-					<div class="img1"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
-					<div class="img2"><img class="img-fluid img-thumbnail" src="img/tovar_mini1.jpg" alt=""></div>
-					<div class="img3"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
-				</div>
-				<div class="tov_info ">
-					<p class="text-center text">Платье HM 0470607 Зеленое</p>
-					<p class="text-center">Размер: L</p>
-					<button type="button" class="btn btn-danger">ЗАМОВИТИ</button>
-				</div>
-			</div>
-			<div class="tov ">
-				<div class="con">
-					<div class="img "><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
-					<div class="img1"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
-					<div class="img2"><img class="img-fluid img-thumbnail" src="img/tovar_mini1.jpg" alt=""></div>
-					<div class="img3"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
-				</div>
-				<div class="tov_info ">
-					<p class="text-center text">Платье HM 0470607 Зеленое</p>
-					<p class="text-center">Размер: L</p>
-					<button type="button" class="btn btn-danger">ЗАМОВИТИ</button>
-				</div>
-			</div>
-			<div class="tov ">
-				<div class="con">
-					<div class="img "><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
-					<div class="img1"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
-					<div class="img2"><img class="img-fluid img-thumbnail" src="img/tovar_mini1.jpg" alt=""></div>
-					<div class="img3"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
-				</div>
-				<div class="tov_info ">
-					<p class="text-center text">Платье HM 0470607 Зеленое</p>
-					<p class="text-center">Размер: L</p>
-					<button type="button" class="btn btn-danger">ЗАМОВИТИ</button>
-				</div>
-			</div>
-			<div class="tov ">
-				<div class="con">
-					<div class="img "><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
-					<div class="img1"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
-					<div class="img2"><img class="img-fluid img-thumbnail" src="img/tovar_mini1.jpg" alt=""></div>
-					<div class="img3"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
-				</div>
-				<div class="tov_info ">
-					<p class="text-center">Платье HM 0470607 Зеленое Lorem ipsum dolor sit amet.</p>
-					<p class="text-center">Размер: L</p>
-					<button type="button" class="btn btn-danger">ЗАМОВИТИ</button>
-				</div>
-			</div>
-			<div class="tov ">
-				<div class="con">
-					<div class="img "><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
-					<div class="img1"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
-					<div class="img2"><img class="img-fluid img-thumbnail" src="img/tovar_mini1.jpg" alt=""></div>
-					<div class="img3"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
-				</div>
-				<div class="tov_info ">
-					<p class="text-center text">Платье HM 0470607 Зеленое</p>
-					<p class="text-center">Размер: L</p>
-					<button type="button" class="btn btn-danger">ЗАМОВИТИ</button>
 				</div>
 			</div>
 
@@ -295,9 +151,11 @@
 				<p> © 2017 Усі права захищені</p>
 			</div>
 		</footer>
-		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script type="text/javascript" src="js/javascript.js"></script>
 	</div>
 </body>
 
