--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						</div>
 					</div>
 					<div class="col-xl-1 col-lg-1 col-md-2 col-sm-2 col-4 order-3 order-md-3 text-center heart">
-						<span class="badge badge-success">3</span>
+						<span class="badge badge-success">a</span>
 						<img class="img-fluid" src="img/heart.png" alt="" href="#">
 						<p>Сподобалось</p>
 					</div>
@@ -82,38 +82,8 @@
 			<div class="price"></div>
 		</div>
 		<content>
-			<!-- Modal -->
-			<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-				<div class="modal-dialog" role="document">
-					<div class="modal-content">
-						<div class="modal-header">
-							<h5 class="modal-title" id="exampleModalLabel">Оформлення замовлення</h5>
-							<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-							<span aria-hidden="true">&times;</span>
-						</button>
-						</div>
-						<div class="modal-body">
-							...
-						</div>
-						<div class="modal-footer justify-content-center">
-							<button type="button" class="btn  btn-danger">Оформити замовлення</button>
-						</div>
-					</div>
-				</div>
-			</div>
 			<!-- tovaru -->
-			<div class="tov" id="goods">
-				<div class="con">
-					<div class="img "><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt="ssss" id="myImg"></div>
-					<div class="img1"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
-					<div class="img2"><img class="img-fluid img-thumbnail" src="img/tovar_mini1.jpg" alt=""></div>
-					<div class="img3"><img class="img-fluid img-thumbnail" src="img/tovar1.jpg" alt=""></div>
-				</div>
-				<div class="tov_info ">
-					<p class="text-center text">Платье HM 0470607 Зеленое Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, accusamus.</p>
-					<p class="text-center">Размер: L</p>
-					<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal">ЗАМОВИТИ</button>
-				</div>
+			<div class="goods" id="goods">
 			</div>
 
 		</content>
@@ -151,11 +121,8 @@
 				<p> © 2017 Усі права захищені</p>
 			</div>
 		</footer>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-		<script type="text/javascript" src="js/javascript.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+		<script src="js/javascript.js"></script>
 	</div>
 </body>
 
