--- a/cart.html
+++ b/cart.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="viewport" content="width=device-width">
-	<title>Shop-Shop</title>
+	<title>Корзина</title>
 	<link rel="icon" href="favicon.ico">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/style-media.css">
@@ -66,30 +66,9 @@
 				</div>
 			</div>
 		</header>
-		<div class="sidebar">
-			<div class="view">
-				<div>
-					<p class="text-center">Вид</p>
-					<label><input type="checkbox"/><i></i>Блузки</label>
-					<label><input type="checkbox"/><i></i>Брюки</label>
-					<label><input type="checkbox"/><i></i>Гольфи</label>
-					<label><input type="checkbox"/><i></i>Джинси</label>
-					<label><input type="checkbox"/><i></i>Кардігани</label>
-					<label><input type="checkbox"/><i></i>Плаття</label>
-					<label><input type="checkbox"/><i></i>Рубашки</label>
-				</div>
-			</div>
 
-			<div class="size"></div>
-			<div class="price"></div>
-		</div>
-		<content>
-			<!-- tovaru -->
-			<div class="goods" id="goods">
-			</div>
+        <div id="my-cart"> </div>
 
-
-		</content>
 		<footer>
 			<div class="container">
 				<div class="row justify-content-center">
@@ -124,8 +103,8 @@
 				<p> © 2017 Усі права захищені</p>
 			</div>
 		</footer>
-		<script src="js/jquery-3.2.1.min.js"></script>
-		<script src="js/javascript.js"></script>
+        <script src="js/jquery-3.2.1.min.js"></script>
+		<script src="js/cart.js"></script>
 	</div>
 </body>
 
