--- a/cart.html
+++ b/cart.html
@@ -1,111 +1,24 @@
 <!DOCTYPE html>
-<html lang="ru">
-
+<html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="viewport" content="width=device-width">
-	<title>Корзина</title>
-	<link rel="icon" href="favicon.ico">
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/style-media.css">
-	<link rel="stylesheet" href="css/bootstrap.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/font-awesome.css">
-	<script type="text/javascript" href="js/bodstsrap.min.js"></script>
-
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <link rel="stylesheet" href="css/cart.css">
 </head>
-
 <body>
-	<div class="wrapper">
-		<header class="container-fluid">
-			<nav class="navbar navbar-expand-md navbar-light">
-				<div class="navbar-brand">
-					<a href="index.html">UA</a>
-					<a href="#">RU</a>
-				</div>
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-					<div class="navbar-nav">
-						<a class="nav-item nav-link active text-dark" href="index.html">Магазин</a>
-						<a class="nav-item nav-link text-dark" href="delivery.html">Доставка та оплата</a>
-						<a class="nav-item nav-link text-dark" href="contact.html">Контакти</a>
-					</div>
-					<div class="navbar-nav ml-auto">
-						<a class="nav-item nav-link text-dark" href="#">Увійти</a>
-					</div>
-				</div>
-			</nav>
-			<div class="container-fluid ">
-				<div class="row justify-content-center">
-					<div class="col-xl-3 col-lg-2 col-md-2 col-sm-0 col-0 order-5 order-lg-1  logo">
-						<img src="img/icon.png" alt="">
-					</div>
-					<div class="col-xl-7 col-lg-8 col-md-8 col-sm-8 col-12 align-self-center order-2 order-md-2 bloc2">
-						<div class="input-group serch_main">
-							<input type="text" class="form-control" placeholder="Пошук..." aria-label="Search for...">
-							<span class="input-group-btn">
-							<button class="btn btn-secondary" type="button">Пошук</button>
-						</span>
-						</div>
-					</div>
-					<div class="col-xl-1 col-lg-1 col-md-2 col-sm-2 col-4 order-3 order-md-3 text-center heart">
-						<span class="badge badge-success">a</span>
-						<img class="img-fluid" src="img/heart.png" alt="" href="#">
-						<p>Сподобалось</p>
-					</div>
-					<div class="col-xl-1 col-lg-1 col-md-2 col-sm-2 col-4 order-4 order-md-4 text-center cart">
-						<span class="badge badge-success" id="mini-cart"></span>
-						<a href="cart.html">
-							<img class="img-fluid" src="img/cart.png" alt="cart" >
-						</a>
-						<p>Корзина</p>
-					</div>
-				</div>
-			</div>
-		</header>
-
-        <div id="my-cart"> </div>
-
-		<footer>
-			<div class="container">
-				<div class="row justify-content-center">
-					<div class="col-4 col-lg-3 widget_nav_menu">
-						<p class="title-widget text-center">Каталог</p>
-						<ul class="list-unstyled">
-							<li><a href="#">Головні убори</a></li>
-							<li><a href="#">Жіночий одяг</a></li>
-							<li><a href="#">Аксесуари</a></li>
-							<li><a href="#">Жіноче взуття</a></li>
-							<li><a href="#">Розпродаж</a></li>
-						</ul>
-					</div>
-					<div class="col-4 col-lg-3 widget_nav_menu">
-						<p class="title-widget text-center">Про нас</p>
-						<ul class="list-unstyled">
-							<li><a href="index.html">Магазин</a></li>
-	                        <li><a href="delivery.html">Доставка та оплата</a></li>
-	                        <li><a href="contact.html">Контакти</a></li>
-						</ul>
-					</div>
-					<div class="col-4 col-lg-3 ">
-						<p class="title-widget">Контакти </p>
-						<div class="contact">
-							<p>Email: mail@gmail.com</p>
-							<p>Оператор +380502232658</p>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="bottom text-center">
-				<p> © 2017 Усі права захищені</p>
-			</div>
-		</footer>
-        <script src="js/jquery-3.2.1.min.js"></script>
-		<script src="js/cart.js"></script>
-	</div>
+<header></header>
+<main>
+    <div class="dd"></div>
+    <div class="main-cart"></div>
+    <div class="email-field">
+        <p>Имя: <input type="text" id="ename"></p>
+        <p>Email: <input type="text" id="email"></p>
+        <p>Телефон: <input type="text" id="ephone"></p>
+        <p><button class="send-email">Заказать</button></p>
+    </div>
+</main>
+<footer></footer>
+<script src="js/jquery-3.2.1.min.js"></script>
+<script src="js/cart.js"></script>
 </body>
-
 </html>
