--- a/index.html
+++ b/index.html
@@ -1,132 +1,110 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="viewport" content="width=device-width">
-	<title>Shop-Shop</title>
-	<link rel="icon" href="favicon.ico">
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/style-media.css">
-	<link rel="stylesheet" href="css/bootstrap.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/font-awesome.css">
-	<script type="text/javascript" href="js/bodstsrap.min.js"></script>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width">
+    <title>Shop-Shop</title>
+    <link rel="icon" href="favicon.ico">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main-media.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
 </head>
-
 <body>
-	<div class="wrapper">
-		<header class="container-fluid">
-			<nav class="navbar navbar-expand-md navbar-light">
-				<div class="navbar-brand">
-					<a href="index.html">UA</a>
-					<a href="#">RU</a>
-				</div>
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-					<div class="navbar-nav">
-						<a class="nav-item nav-link active text-dark" href="index.html">Магазин</a>
-						<a class="nav-item nav-link text-dark" href="delivery.html">Доставка та оплата</a>
-						<a class="nav-item nav-link text-dark" href="contact.html">Контакти</a>
-					</div>
-					<div class="navbar-nav ml-auto">
-						<a class="nav-item nav-link text-dark" href="#">Увійти</a>
-					</div>
-				</div>
-			</nav>
-			<div class="container-fluid ">
-				<div class="row justify-content-center">
-					<div class="col-xl-3 col-lg-2 col-md-2 col-sm-0 col-0 order-5 order-lg-1  logo">
-						<img src="img/icon.png" alt="">
-					</div>
-					<div class="col-xl-7 col-lg-8 col-md-8 col-sm-8 col-12 align-self-center order-2 order-md-2 bloc2">
-						<div class="input-group serch_main">
-							<input type="text" class="form-control" placeholder="Пошук..." aria-label="Search for...">
-							<span class="input-group-btn">
-							<button class="btn btn-secondary" type="button">Пошук</button>
-						</span>
-						</div>
-					</div>
-					<div class="col-xl-1 col-lg-1 col-md-2 col-sm-2 col-4 order-3 order-md-3 text-center heart">
-						<span class="badge badge-success">a</span>
-						<img class="img-fluid" src="img/heart.png" alt="" href="#">
-						<p>Сподобалось</p>
-					</div>
-					<div class="col-xl-1 col-lg-1 col-md-2 col-sm-2 col-4 order-4 order-md-4 text-center cart">
-						<span class="badge badge-success" id="mini-cart"></span>
-						<a href="cart.html">
-							<img class="img-fluid" src="img/cart.png" alt="cart" >
-						</a>
-						<p>Корзина</p>
-					</div>
-				</div>
-			</div>
-		</header>
-		<div class="sidebar">
-			<div class="view">
-				<div>
-					<p class="text-center">Вид</p>
-					<label><input type="checkbox"/><i></i>Блузки</label>
-					<label><input type="checkbox"/><i></i>Брюки</label>
-					<label><input type="checkbox"/><i></i>Гольфи</label>
-					<label><input type="checkbox"/><i></i>Джинси</label>
-					<label><input type="checkbox"/><i></i>Кардігани</label>
-					<label><input type="checkbox"/><i></i>Плаття</label>
-					<label><input type="checkbox"/><i></i>Рубашки</label>
-				</div>
-			</div>
+    <div class="wrapper">
 
-			<div class="size"></div>
-			<div class="price"></div>
-		</div>
-		<content>
-			<!-- tovaru -->
-			<div class="goods" id="goods">
-			</div>
+        <header>
 
+                <nav class="navbar navbar-expand-md navbar-light">
+                    <div class="navbar-brand">
+                        <a href="index.html">UA</a>
+                        <a href="#">RU</a>
+                    </div>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <div class="navbar-nav">
+                            <a class="nav-item nav-link active text-dark" href="index.html">Магазин</a>
+                            <a class="nav-item nav-link text-dark" href="delivery.html">Доставка та оплата</a>
+                            <a class="nav-item nav-link text-dark" href="contact.html">Контакти</a>
+                        </div>
+                        <div class="navbar-nav ml-auto">
+                            <a class="nav-item nav-link text-dark" href="#">Увійти</a>
+                        </div>
+                    </div>
+                </nav>
+                <div class="container-fluid ">
+                    <div class="row justify-content-center">
+                        <div class="col-xl-3 col-lg-2 col-md-2 col-sm-0 col-0 order-5 order-lg-1  logo">
+                            <img src="img/icon.png" alt="">
+                        </div>
+                        <div class="col-xl-7 col-lg-8 col-md-8 col-sm-8 col-12 align-self-center order-2 order-md-2 bloc2">
+                            <div class="input-group serch_main">
+                                <input type="text" class="form-control" placeholder="Пошук..." aria-label="Search for...">
+                                <span class="input-group-btn">
+                                <button class="btn btn-secondary" type="button">Пошук</button>
+                            </span>
+                            </div>
+                        </div>
+                        <div class="col-xl-1 col-lg-1 col-md-2 col-sm-2 col-4 order-3 order-md-3 text-center heart">
+                            <span class="badge badge-success">3</span>
+                            <img class="img-fluid" src="img/heart.png" alt="" href="#">
+                            <p>Сподобалось</p>
+                        </div>
+                        <div class="col-xl-1 col-lg-1 col-md-2 col-sm-2 col-4 order-4 order-md-4 cart-mini"><span class="badge badge-success qq">1</span>
+						<img class="img-fluid" src="img/cart.png" alt="" href="#">
+						<p>Корзина</p></div>
+                    </div>
+                </div>
 
-		</content>
-		<footer>
-			<div class="container">
-				<div class="row justify-content-center">
-					<div class="col-4 col-lg-3 widget_nav_menu">
-						<p class="title-widget text-center">Каталог</p>
-						<ul class="list-unstyled">
-							<li><a href="#">Головні убори</a></li>
-							<li><a href="#">Жіночий одяг</a></li>
-							<li><a href="#">Аксесуари</a></li>
-							<li><a href="#">Жіноче взуття</a></li>
-							<li><a href="#">Розпродаж</a></li>
-						</ul>
-					</div>
-					<div class="col-4 col-lg-3 widget_nav_menu">
-						<p class="title-widget text-center">Про нас</p>
-						<ul class="list-unstyled">
-							<li><a href="index.html">Магазин</a></li>
-	                        <li><a href="delivery.html">Доставка та оплата</a></li>
-	                        <li><a href="contact.html">Контакти</a></li>
-						</ul>
-					</div>
-					<div class="col-4 col-lg-3 ">
-						<p class="title-widget">Контакти </p>
-						<div class="contact">
-							<p>Email: mail@gmail.com</p>
-							<p>Оператор +380502232658</p>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="bottom text-center">
-				<p> © 2017 Усі права захищені</p>
-			</div>
-		</footer>
-		<script src="js/jquery-3.2.1.min.js"></script>
-		<script src="js/javascript.js"></script>
-	</div>
+        </header>
+        <content>
+            <div class="mini-cart"></div>
+
+            <div class="goods-out"></div>
+
+        </content>
+        <footer>
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-4 col-lg-3 widget_nav_menu">
+                            <p class="title-widget text-center">Каталог</p>
+                            <ul class="list-unstyled">
+                                <li><a href="#">Головні убори</a></li>
+                                <li><a href="#">Жіночий одяг</a></li>
+                                <li><a href="#">Аксесуари</a></li>
+                                <li><a href="#">Жіноче взуття</a></li>
+                                <li><a href="#">Розпродаж</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-4 col-lg-3 widget_nav_menu">
+                            <p class="title-widget text-center">Про нас</p>
+                            <ul class="list-unstyled">
+                                <li><a href="index.html">Магазин</a></li>
+                                <li><a href="delivery.html">Доставка та оплата</a></li>
+                                <li><a href="contact.html">Контакти</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-4 col-lg-3 ">
+                            <p class="title-widget">Контакти </p>
+                            <div class="contact">
+                                <p>Email: mail@gmail.com</p>
+                                <p>Оператор +380502232658</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="bottom text-center">
+                    <p> © 2017 Усі права захищені</p>
+                </div>
+        </footer>
+
+        <script src="js/jquery-3.2.1.min.js"></script>
+        <script src="js/shop.js"></script>
+
+        		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+        		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+    </div>
 </body>
-
 </html>
