--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
                             <img class="img-fluid" src="img/heart.png" alt="" href="#">
                             <p>Сподобалось</p>
                         </div>
-                        <div class="col-xl-1 col-lg-1 col-md-2 col-sm-2 col-4 order-4 order-md-4 cart-mini"><span class="badge badge-success qq">1</span>
-						<img class="img-fluid" src="img/cart.png" alt="" href="#">
+                        <div class="col-xl-1 col-lg-1 col-md-2 col-sm-2 col-4 order-4 order-md-4 cart-mini">
+                            <a href="cart.html">
+                                <img class="img-fluid" src="img/cart.png" alt="" href="#">
+                            </a>
 						<p>Корзина</p></div>
                     </div>
                 </div>
