--- a/cart.html
+++ b/cart.html
@@ -7,14 +7,13 @@
 </head>
 <body>
 <header></header>
-<main>
-    <div class="dd"></div>
+<main class="container">
     <div class="main-cart"></div>
     <div class="email-field">
-        <p>Имя: <input type="text" id="ename"></p>
+        <p>Имя: <input class="dws-input" type="text" id="ename"></p>
         <p>Email: <input type="text" id="email"></p>
         <p>Телефон: <input type="text" id="ephone"></p>
-        <p><button class="send-email">Заказать</button></p>
+        <p><button class="send-email dws-submit">Замовити</button></p>
     </div>
 </main>
 <footer></footer>
