--- a/contact.html
+++ b/contact.html
@@ -58,9 +58,10 @@
                         <p>Сподобалось</p>
                     </div>
                     <div class="col-xl-1 col-lg-1 col-md-2 col-sm-2 col-4 order-4 order-md-4 text-center cart">
-                        <span class="badge badge-success">1</span>
-                        <img class="img-fluid" src="img/cart.png" alt="" href="#">
-                        <p>Корзина</p>
+                        <a href="cart.html">
+                            <img class="img-fluid" src="img/cart.png" alt="" href="#">
+                        </a>
+                    <p>Корзина</p></div>
                     </div>
                 </div>
             </div>
