--- a/cart.html
+++ b/cart.html
@@ -15,6 +15,7 @@
         <p>Телефон: <input type="text" id="ephone"></p>
         <p><button class="send-email dws-submit">Замовити</button></p>
     </div>
+    <a class="nav-item nav-link active text-dark" href="index.html">Магазин</a>
 </main>
 <footer></footer>
 <script src="js/jquery-3.2.1.min.js"></script>
